--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <title>Alexa Aguilar</title>
   </head>
-
-
   <body>
-    <h1>Alexa Aguilar</h1>
-    <p>This is my first webpage.</p>
+    <header>
+      <h1>Alexa Aguilar</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>.01</li>
+        <li>.02</li>
+        <li>.03</li>
+        <li>.04</li>
+        <li>.05</li>
+        <li>Resume</li>
+      </ul>
+    </nav>
 
-    <p>I like:</p>
-    <ul>
-      <li>pasta</li>
-      <li>sleeping</li>
-      <li>memes</li>
-    </ul>
-
-    <img src="octocat.png" alt="Octocat" />
-    <p>This is an Octocat</p>
+    <main>
+      
+    </main>
   </body>
-
-
 </html>
