--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -7,20 +7,22 @@
   <body>
     <header>
       <h1>Alexa Aguilar</h1>
+      <nav>
+        <ul>
+          <li><a href="the-drums.html">.01</a></li>
+          <li><a href="marshall-vintage.html">.02</a></li>
+          <li><a href="mrs-meyers.html">.03</a></li>
+          <li><a href="distraction-magazine.html">.04</a></li>
+          <li>Resume</li>
+        </ul>
+      </nav>
     </header>
-    <nav>
-      <ul>
-        <li>.01</li>
-        <li>.02</li>
-        <li>.03</li>
-        <li>.04</li>
-        <li>.05</li>
-        <li>Resume</li>
-      </ul>
-    </nav>
 
     <main>
-
+      <section id="bio">
+        <img src="images/me-placeholder.jpg" />
+        <p>Alexa Aguilar is a creative advertising student currently attending the University of Miami. She has a passion for graphic design, art direction, and speaking in the third-person.</p>
+      </section>
     </main>
   </body>
 </html>
