--- a/marshall-vintage.html
+++ b/marshall-vintage.html
@@ -17,5 +17,12 @@
       </nav>
     </header>
     <p class="description">A 360 advertising campaign for Marshall Vintage speakers.</p>
+
+    <img src="images/marshallvintage-mouthsample.jpg" height=400px />
+    <img src="images/marshallvintage-spoonsample.jpg" height=400px />
+
+    <a href="documents/marshall-fullpackage.pdf" download="marshall">Download full package</a>
+
+
   </body>
 </html>
