change mrs meyers to awsfl

--- a/distraction-magazine.html
+++ b/distraction-magazine.html
@@ -10,9 +10,9 @@
         <ul>
           <li><a href="the-drums.html">.01</a></li>
           <li><a href="marshall-vintage.html">.02</a></li>
-          <li><a href="mrs-meyers.html">.03</a></li>
+          <li><a href="ritual.html">.03</a></li>
           <li><a href="distraction-magazine.html">.04</a></li>
-          <li>Resume</li>
+          <li><a href="resume-css/resume-css.html">Resume</a></li>
         </ul>
       </nav>
     </header>
