changed distraction to mrs meyers

--- a/mrs-meyers.html
+++ b/mrs-meyers.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Marshall Vintage</title>
+    <title>Mrs. Meyers Clean Day</title>
   </head>
   <body>
     <header>
-      <h1>Marshall Vintage</h1>
+      <h1>Mrs. Meyers Clean Day</h1>
       <nav>
         <ul>
           <li><a href="the-drums.html">.01</a></li>
@@ -16,12 +16,13 @@
         </ul>
       </nav>
     </header>
-    <p class="description">A 360 advertising campaign for Marshall Vintage speakers.</p>
 
-    <img src="images/marshallvintage-mouthsample.jpg" height=400px />
-    <img src="images/marshallvintage-spoonsample.jpg" height=400px />
+    <img src="images/meyers-postersample1.jpg" height=400px />
+    <img src="images/meyers-postersample2.jpg" height=400px />
 
-    <a href="documents/marshall-fullpackage.pdf" download="marshall">Download full package</a>
+    <p class="description">Print campaign for Mrs. Meyers Clean Day products.</p>
+
+    <a href="documents/mrsmeyers-fullpackage.pdf" download="mrs-meyers">Download full package</a>
 
   </body>
 </html>
