--- a/awsfl.html
+++ b/awsfl.html
@@ -11,7 +11,7 @@
           <li><a href="the-drums.html">.01</a></li>
           <li><a href="marshall-vintage.html">.02</a></li>
           <li><a href="awsfl.html">.03</a></li>
-          <li><a href="distraction-magazine.html">.04</a></li>
+          <li><a href="mrs-meyers.html">.04</a></li>
           <li><a href="resume-css/resume-css.html">Resume</a></li>
         </ul>
       </nav>
