changed bio pic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
       <section id="bio">
-        <img src="images/me-placeholder.jpg" />
+        <img src="images/me.jpg" width=500px/>
         <p>Alexa Aguilar is a creative advertising student currently attending the University of Miami. She has a passion for graphic design, art direction, and speaking in the third-person.</p>
       </section>
     </main>
