added logo and link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <h1>Alexa Aguilar</h1>
+      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
       <nav>
         <ul>
           <li><a href="the-drums.html">.01</a></li>
