--- a/awsfl.html
+++ b/awsfl.html
@@ -6,6 +6,8 @@
   <body>
     <header>
       <h1>Animal Welfare Society South Florida</h1>
+      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
+
       <nav>
         <ul>
           <li><a href="the-drums.html">.01</a></li>
