--- a/awsfl.html
+++ b/awsfl.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hcu0ycp.css">
+
     <title>Animal Welfare Society South Florida</title>
   </head>
-  <body>
-    <header>
-      <h1>Animal Welfare Society South Florida</h1>
-      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
 
-      <nav>
+  <body>
+    <div class=grid id="drums-container">
+    <h1 class="title">Animal Welfare Society South Florida</h1>
+    <div class="sidebar">
+    <div class="header">
+      <a href="index.html"><img class="logo" src="images/logo_fixed.png" alt="Alexa Aguilar, Art Director and Graphic Designer"/></a>
+    </div>
+      <div class="nav">
         <ul>
-          <li><a href="the-drums.html">.01</a></li>
-          <li><a href="marshall-vintage.html">.02</a></li>
-          <li><a href="awsfl.html">.03</a></li>
-          <li><a href="mrs-meyers.html">.04</a></li>
+          <li><a href="the-drums.html"><strong>.01:</strong> The Drums</a></li>
+          <li><a href="marshall-vintage.html"><strong>.02:</strong> Marshall Vintage</a></li>
+          <li><a href="awsfl.html"><strong>.03:</strong> AWSFL</a></li>
+          <li><a href="mrs-meyers.html"><strong>.04:</strong> Mrs. Meyers Clean Day</a></li>
           <li><a href="resume-css/resume-css.html">Resume</a></li>
         </ul>
-      </nav>
-    </header>
+      </div>
+    </div>
 
-    <img src="images/awsfl-cardsample1.jpg" height=400px/>
-    <img src="images/awsfl-cardsample2.jpg" height=400px />
-    <p class="description">Rebranding campaign for local nonprofit, the Animal Welfare Society South Florida.</p>
 
-    <a href="documents/awsfl-fullpackage.pdf" download="awsfl">Download full package</a>
+    <div class="description">
+      <p id="awsfl-description">Branding campaign for local Miami nonprofit the Animal Welfare Society South Florida.</p>
+    </div>
 
+    <div class="sampleimage1">
+      <img class="awsfl-image" src="images/awsfl-cardsample1.jpg" />
+    </div>
+    <div class="sampleimage2">
+      <img class="awsfl-image" src="images/awsfl-cardsample2.jpg" />
+    </div>
+
+    <div class="download-link">
+      <a href="documents/awsfl-fullpackage.pdf" download="awsfl">Download full package</a>
+    </div>
+  </div>
   </body>
 </html>
