--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hcu0ycp.css">
+
     <title>Alexa Aguilar</title>
   </head>
   <body>
-    <header>
-      <h1>Alexa Aguilar</h1>
-      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
-      <nav>
+    <div class="grid" id="homepage-container">
+    <div class="sidebar">
+    <div class="header">
+      <!-- <h1>Alexa Aguilar</h1> -->
+      <a href="index.html"><img class="logo" src="images/logo_fixed.png" alt="Alexa Aguilar, Art Director and Graphic Designer"/></a>
+    </div>
+      <div class="nav">
         <ul>
-          <li><a href="the-drums.html">.01</a></li>
-          <li><a href="marshall-vintage.html">.02</a></li>
-          <li><a href="awsfl.html">.03</a></li>
-          <li><a href="mrs-meyers.html">.04</a></li>
+          <li><a href="the-drums.html"><strong>.01:</strong> The Drums</a></li>
+          <li><a href="marshall-vintage.html"><strong>.02:</strong> Marshall Vintage</a></li>
+          <li><a href="awsfl.html"><strong>.03:</strong> AWSFL</a></li>
+          <li><a href="mrs-meyers.html"><strong>.04:</strong> Mrs. Meyers Clean Day</a></li>
           <li><a href="resume-css/resume-css.html">Resume</a></li>
         </ul>
-      </nav>
-    </header>
-
-    <main>
-      <section id="bio">
-        <img src="images/me.jpg" width=500px/>
-        <p>Alexa Aguilar is a creative advertising student currently attending the University of Miami. She has a passion for graphic design, art direction, and speaking in the third-person.</p>
-      </section>
-    </main>
+      </div>
+    </div>
+      <div id="bio">
+          <img class="image" id="bio-image" src="images/me.jpg" />
+        <p><strong>Alexa Aguilar</strong> is a creative advertising student currently attending the University of Miami. She has a passion for graphic design, art direction, and speaking in the third-person.</p>
+      </div>
+    </div>
   </body>
 </html>
