--- a/mrs-meyers.html
+++ b/mrs-meyers.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hcu0ycp.css">
     <title>Mrs. Meyers Clean Day</title>
   </head>
-  <body>
-    <header>
-      <h1>Mrs. Meyers Clean Day</h1>
-      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
 
-      <nav>
+
+  <body>
+    <div class=grid id="drums-container">
+    <h1 class="title">Mrs. Meyers Clean Day</h1>
+    <div class="sidebar">
+    <div class="header">
+      <a href="index.html"><img class="logo" src="images/logo_fixed.png" alt="Alexa Aguilar, Art Director and Graphic Designer"/></a>
+    </div>
+      <div class="nav">
         <ul>
-          <li><a href="the-drums.html">.01</a></li>
-          <li><a href="marshall-vintage.html">.02</a></li>
-          <li><a href="awsfl.html">.03</a></li>
-          <li><a href="mrs-meyers.html">.04</a></li>
+          <li><a href="the-drums.html"><strong>.01:</strong> The Drums</a></li>
+          <li><a href="marshall-vintage.html"><strong>.02:</strong> Marshall Vintage</a></li>
+          <li><a href="awsfl.html"><strong>.03:</strong> AWSFL</a></li>
+          <li><a href="mrs-meyers.html"><strong>.04:</strong> Mrs. Meyers Clean Day</a></li>
           <li><a href="resume-css/resume-css.html">Resume</a></li>
         </ul>
-      </nav>
-    </header>
+      </div>
+    </div>
 
-    <img src="images/meyers-postersample1.jpg" height=400px />
-    <img src="images/meyers-postersample2.jpg" height=400px />
+    <div class="description">
+    <p>Print campaign for Mrs. Meyers Clean Day products.</p>
+    </div>
 
-    <p class="description">Print campaign for Mrs. Meyers Clean Day products.</p>
+    <div class="sampleimage1">
+      <img id="meyersposter1" class="meyers-image" src="images/meyers-postersample1.jpg" />
+    </div>
+    <div class="sampleimage2">
+      <img class="meyers-image"src="images/meyers-postersample2.jpg" />
+    </div>
 
-    <a href="documents/mrsmeyers-fullpackage.pdf" download="mrs-meyers">Download full package</a>
-
+    <div class="download-link">
+      <a href="documents/mrsmeyers-fullpackage.pdf" download="mrs-meyers">Download full package</a>
+    </div>
+  </div>
   </body>
 </html>
