--- a/the-drums.html
+++ b/the-drums.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hcu0ycp.css">
     <title>The Drums</title>
   </head>
+
   <body>
-    <header>
-      <h1>The Drums</h1>
-      <a href="index.html"><img src="images/logo_fixed.png" width=200px/></a>
+    <div class=grid id="drums-container">
+      <h1 class="title">The Drums</h1>
+      <div class="sidebar">
+      <div class="header">
+        <a href="index.html"><img class="logo" src="images/logo_fixed.png" alt="Alexa Aguilar, Art Director and Graphic Designer"/></a>
+      </div>
+        <div class="nav">
+          <ul>
+            <li><a href="the-drums.html"><strong>.01:</strong> The Drums</a></li>
+            <li><a href="marshall-vintage.html"><strong>.02:</strong> Marshall Vintage</a></li>
+            <li><a href="awsfl.html"><strong>.03:</strong> AWSFL</a></li>
+            <li><a href="mrs-meyers.html"><strong>.04:</strong> Mrs. Meyers Clean Day</a></li>
+            <li><a href="resume-css/resume-css.html">Resume</a></li>
+          </ul>
+        </div>
+      </div>
 
-      <nav>
-        <ul>
-          <li><a href="the-drums.html">.01</a></li>
-          <li><a href="marshall-vintage.html">.02</a></li>
-          <li><a href="awsfl.html">.03</a></li>
-          <li><a href="mrs-meyers.html">.04</a></li>
-          <li><a href="resume-css/resume-css.html">Resume</a></li>
-        </ul>
-      </nav>
-    </header>
-    <p class="description">A design campaign created for the indie-rock band The Drums.</p>
-    <img src="images/thedrums-singleposter.jpg" height=400px />
-    <img src="images/thedrums-tanksample.jpg" height=400px/>
+        <div class="description">
+          <p>A design campaign created for the indie-rock band The Drums.</p>
+        </div>
 
-    <a href="documents/thedrums-fullpacakge.pdf" download="thedrums">Download full package</a>
+        <div class="sampleimage1">
+          <img class="drums-image" src="images/thedrums-singleposter.jpg" />
+        </div>
+        <div class="sampleimage2">
+          <img class="drums-image"src="images/thedrums-tanksample.jpg" />
+        </div>
+
+        <div class="download-link">
+          <a href="documents/thedrums-fullpacakge.pdf" download="thedrums">Download full package</a>
+        </div>
+      </div>
   </body>
 </html>
