added link to main site

--- a/resume-css/resume-css.html
+++ b/resume-css/resume-css.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:700|Work+Sans:300,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/hcu0ycp.css">
     <title>Alexa Aguilar - Resume</title>
   </head>
   <body>
     <div class="grid" id="container">
 
       <div id="header">
-        <h1>Alexa Aguilar</h1>
+        <h1><a href="http://alexaaguilar.github.io">Alexa Aguilar</a></h1>
       </div>
       <div id="subhead">
         <p>Creative Advertising Student at University of Miami</p>
