--- a/mrs-meyers.html
+++ b/mrs-meyers.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="description">
-    <p>Print campaign for Mrs. Meyers Clean Day products.</p>
+    <p>Print campaign for Mrs. Meyers Clean Day products. Made from all-natural ingredients and no harmful chemicals such as chlorine bleach or ammonia, Mrs. Meyers can easily appeal to the health-conscious consumer. This series of print ads were intended to communicate that Mrs. Meyers is better for the body than the leading household cleaner. Included in the package is the series of three print ads and two ambient ideas to pair with the campaign.</p>
     </div>
 
     <div class="sampleimage1">
