--- a/the-drums.html
+++ b/the-drums.html
@@ -25,7 +25,7 @@
       </div>
 
         <div class="description">
-          <p>A design campaign created for the indie-rock band The Drums.</p>
+          <p>A design campaign created for the indie-rock band The Drums. The purpose of this design campaign was to visually capture The Drums unique style of music. The band has a distinct California beach scene sound, with some grunge undertones, which I tried to capture in this campaign. Included in the full package is the presentation deck with the inspiration moodboard, three posters, three billboards, and apparel.</p>
         </div>
 
         <div class="sampleimage1">
