changed id on container and added additional font

--- a/awsfl.html
+++ b/awsfl.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class=grid id="drums-container">
+    <div class=grid id="container">
     <h1 class="title">Animal Welfare Society South Florida</h1>
     <div class="sidebar">
     <div class="header">
