--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Alexa Aguilar</title>
   </head>
   <body>
-    <div class="grid" id="homepage-container">
+    <div class="grid" id="container">
     <div class="sidebar">
     <div class="header">
       <!-- <h1>Alexa Aguilar</h1> -->
