--- a/mrs-meyers.html
+++ b/mrs-meyers.html
@@ -8,7 +8,7 @@
 
 
   <body>
-    <div class=grid id="drums-container">
+    <div class=grid id="container">
     <h1 class="title">Mrs. Meyers Clean Day</h1>
     <div class="sidebar">
     <div class="header">
