--- a/marshall-vintage.html
+++ b/marshall-vintage.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class=grid id="drums-container">
+    <div class=grid id="container">
     <h1 class="title">Marshall Vintage</h1>
     <div class="sidebar">
     <div class="header">
