--- a/the-drums.html
+++ b/the-drums.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class=grid id="drums-container">
+    <div class=grid id="container">
       <h1 class="title">The Drums</h1>
       <div class="sidebar">
       <div class="header">
