--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
       <div id="bio">
           <img class="image" id="bio-image" src="images/me.jpg" />
-        <p><strong>Alexa Aguilar</strong> is a creative advertising student currently attending the University of Miami. She has a passion for graphic design, art direction, and speaking in the third-person.</p>
+        <p>Hi! I'm <strong>Alexa Aguilar</strong>! I'm a creative advertising student currently studying at the University of Miami, with a passion for graphic design and art direction. I've had experience with branding, campaign conception and execution, art direction, layout design, UX/UI design, and I've worked with several real-life clients on their projects. Check out some of my work, and if you have any inquiries please feel free to contact me at <a href="mailto:a.aguilar5@miami.edu">a.aguilar5@miami.edu</a>.</p>
       </div>
     </div>
   </body>
